--- a/src/app/component-user/component-user.component.html
+++ b/src/app/component-user/component-user.component.html
@@ -1,173 +1,265 @@
 <div class="container">
-    <div class="row mb-2 mt-2 text-center">
-        <div class="col-md-4">
-        </div>
-        <div class="col-md-4">
-            <h5>User Management Portal</h5>
-            <small *ngIf="titleAction$ | async as title">{{ title }}</small>
-        </div>
-        <div class="col-md-4">
-        </div>
+  <div class="row mb-2 mt-2 text-center">
+    <div class="col-md-4"></div>
+    <div class="col-md-4">
+      <h5>User Management Portal</h5>
+      <small *ngIf="titleAction$ | async as title">{{ title }}</small>
     </div>
+    <div class="col-md-4"></div>
+  </div>
 
-    <!-- nav bar -->
-    <nav class="navbar navbar-expand-md breadcrumb">
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <div class="nav nav-pills">
-                <a class="nav-item nav-link active ml-1" (click)="changeTitle('Users')" data-toggle="tab">
-                    <i class="fa fa-users"></i>
-                    Users
-                </a>
-                <a class="nav-item nav-link ml-3" (click)="changeTitle('Settings')" data-toggle="tab">
-                    <i class="fa fa-cogs"></i>
-                    Settings
-                </a>
-                <a class="nav-item nav-link move-right mr-3" (click)="changeTitle('Profile')" data-toggel="tab">
-                    Welcome, Summer
-                    <i class="fa fa-user"></i>
-                </a>
-            </div>
+  <!-- nav bar -->
+  <nav class="navbar navbar-expand-md breadcrumb">
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+      <div class="nav nav-pills">
+        <a class="nav-item nav-link active ml-1" (click)="changeTitle('Users')" data-toggle="tab">
+          <i class="fa fa-users"></i> Users
+        </a>
+        <a class="nav-item nav-link ml-3" (click)="changeTitle('Settings')" data-toggle="tab">
+          <i class="fa fa-cogs"></i> Settings
+        </a>
+        <a class="nav-item nav-link move-right mr-3" (click)="changeTitle('Profile')" data-toggle="tab">
+          Welcome, Summer <i class="fa fa-user"></i>
+        </a>
+      </div>
+    </div>
+  </nav>
+
+  <!-- main content -->
+  <div class="tab-content mt-3" id="myTabContent">
+    <!-- user table -->
+    <div class="tab-pane fade show active" id="users">
+      <div class="mb-3 float-right">
+        <div class="btn-group mr-2">
+          <form class="form-inline my-2 my-lg-0 justify-content-center">
+            <input name="searchFileName" class="form-control mr-sm-2" type="search" placeholder="Search users..." />
+          </form>
+          <!-- New User Button -->
+          <button
+            type="button"
+            class="btn btn-info"
+            data-toggle="modal"
+            data-target="#addUserModal"
+          >
+            <i class="fa fa-plus"></i> New User
+          </button>
         </div>
-    </nav>
-
-    <!-- main content -->
-    <div class="tab-content mt-3" id="myTabContent">
-        <!-- user table -->
-        <div class="tab-pane fade show active" id="users">
-            <div class="mb-3 float-right">
-                <div class="btn-group mr-2">
-                    <form class="form-inline my-2 my-lg-0 justify-content-center">
-                        <input name="searchFileName" class="form-control mr-sm-2" type="search"
-                            placeholder="Search users...">
-                    </form>
-                    <button type="button" class="btn btn-info" data-toggle="modal" data-target="#addUserModal">
-                        <i class="fa fa-plus"></i>New User
-                    </button>
-                </div>
-                <div class="btn-group">
-                    <button type="button" (click)="getUsers(true)" class="btn btn-info">
-                        <i *ngIf="refreshing" class="fas fa-sync fa-spin"></i><i *ngIf="!refreshing"
-                            class="fas fa-sync"></i>
-                    </button>
-                </div>
-            </div>
-            <table class="table table-hover">
-                <thead class="table-borderless">
-                    <tr class="text-center">
-                        <th>Photo</th>
-                        <th>User ID</th>
-                        <th>First Name</th>
-                        <th>Last Name</th>
-                        <th>Username</th>
-                        <th>Email</th>
-                        <th>Status</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody *ngFor="let appUser of users">
-                    <tr class="text-center">
-                        <td>
-                            <img height="40" width="40" src="{{appUser?.profileImageUrl}}"
-                                class="rounded-circle img-fluid img-thumbnail" alt="" />
-                        </td>
-                        <td (click)="onSelectUser(appUser)">{{appUser?.userId}}</td>
-                        <td (click)="onSelectUser(appUser)">{{appUser?.firstName}}</td>
-                        <td (click)="onSelectUser(appUser)">{{appUser?.lastName}}</td>
-                        <td (click)="onSelectUser(appUser)">{{appUser?.userName}}</td>
-                        <td (click)="onSelectUser(appUser)">{{appUser?.email}}</td>
-                        <td>
-                            <span [hidden]="!appUser?.active" class="badge badge-success">Active</span>
-                            <span [hidden]="appUser?.active" class="badge badge-danger">Inactive</span>
-                        </td>
-                        <td class="">
-                            <div class="btn-group">
-                                <button class="btn btn-outline-info"><i class="fas fa-edit"></i></button>
-                                <button class="btn btn-outline-danger"><i class="fas fa-trash"></i></button>
-                            </div>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="btn-group">
+          <button type="button" (click)="getUsers(true)" class="btn btn-info">
+            <i *ngIf="refreshing" class="fas fa-sync fa-spin"></i>
+            <i *ngIf="!refreshing" class="fas fa-sync"></i>
+          </button>
         </div>
+      </div>
 
+      <table class="table table-hover">
+        <thead class="table-borderless">
+          <tr class="text-center">
+            <th>Photo</th>
+            <th>User ID</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Username</th>
+            <th>Email</th>
+            <th>Status</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let appUser of users" class="text-center">
+            <td (click)="onSelectUser(appUser)">
+              <img
+                height="40"
+                width="40"
+                src="{{ appUser?.profileImageUrl }}"
+                class="rounded-circle img-fluid img-thumbnail"
+                alt=""
+              />
+            </td>
+            <td (click)="onSelectUser(appUser)">{{ appUser?.userId }}</td>
+            <td (click)="onSelectUser(appUser)">{{ appUser?.firstName }}</td>
+            <td (click)="onSelectUser(appUser)">{{ appUser?.lastName }}</td>
+            <td (click)="onSelectUser(appUser)">{{ appUser?.userName }}</td>
+            <td (click)="onSelectUser(appUser)">{{ appUser?.email }}</td>
+            <td (click)="onSelectUser(appUser)">
+              <span [hidden]="!appUser?.active" class="badge badge-success">Active</span>
+              <span [hidden]="appUser?.active" class="badge badge-danger">Inactive</span>
+            </td>
+            <td>
+              <div class="btn-group">
+                <button class="btn btn-outline-info"><i class="fas fa-edit"></i></button>
+                <button class="btn btn-outline-danger"><i class="fas fa-trash"></i></button>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 
-        <button type="button" id="openUserInfo" data-toggle="modal" data-target="#viewUserModal">
-        </button>
-        <button [hidden]="true" type="button" id="openUserEdit" data-toggle="modal" data-target="#editUserModal">
-        </button>
+  <!-- New User Modal -->
+  <div
+    class="modal fade"
+    id="addUserModal"
+    tabindex="-1"
+    role="dialog"
+    aria-labelledby="addUserModalTitle"
+    aria-hidden="true"
+  >
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <form #newUserForm="ngForm" (ngSubmit)="onAddNewUser(newUserForm)">
+          <div class="modal-header">
+            <h5 class="modal-title text-center" id="addUserModalTitle">New User</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
 
-        <!-- modal user info-->
-        <div class="modal fade bd-example-modal-lg" id="viewUserModal" tabindex="-1" role="dialog" aria-labelled=""
-            aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title text-center" id="exampleModalLongTitle">{{selectedUser?.firstName}}
-                            {{selectedUser?.lastName}}
-                        </h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <div>
-                            <div class="card">
-                                <div class="card-body">
-                                    <div class="row">
-                                        <div class="col-12 col-sm-auto">
-                                            <div class="mx-auto" style="width: 120px;">
-                                                <div class="d-flex justify-content-center align-items-center rounded">
-                                                    <img class="rounded" height="120" width="120" src="{{selectedUser?.profileImageUrl}}" alt="{{selectedUser?.firstName}}">
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col d-flex flex-column flex-sm-row justify-content-between">
-                                            <div class="text-center text-sm-left mb-sm-0">
-                                                <h6 class="pt-sm-2 pb-1 mb-0 text-nowrap">{{selectedUser?.firstName}}
-                                                    {{selectedUser?.lastName}}</h6>
-                                                <p class="mb-1">{{selectedUser?.userName}}</p>
-                                                <div class="">Status:
-                                                    <span [hidden]="!selectedUser?.active" class="badge badge-success">Active</span>
-                                                    <span [hidden]="!selectedUser?.active" class="badge badge-danger">Inactive</span>
-                                                </div>
-                                                <div class="text-muted"><small>Last Login: {{selectedUser?.logInDateDisplay | date: 'medium'}}</small>
-                                                </div>
-                                            </div>
-                                            <div class="text-center text-sm-right">
-                                                <div class="text-muted"><small>Joined {{selectedUser?.joinDate | date: 'medium'}}</small></div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <ul class="list-group list-group-flush">
-                                    <li class="list-group-item"></li>
-                                    <li class="list-group-item"><i class="fa fa-id-badge float-right"></i>{{selectedUser?.userId}}
-                                    </li>
-                                    <li class="list-group-item"><i class="fa fa-envelope float-right"></i>{{selectedUser?.email}}
-                                    </li>
-                                    <li class="list-group-item"><i class="fas fa-shield-alt float-right"></i>{{selectedUser?.role}}
-                                    </li>
-                                    <li  class="list-group-item"><i class="fas fa-sign-in-alt float-right"></i>{{selectedUser?.logInDateDisplay}}
-                                    </li>
-                                    <li class="list-group-item">
-                                        <span>
-                                            <i class="fa fa-lock float-right" style="color: red;">
-                                            </i>
-                                            Account Locked
-                                        </span>
-                                        <span>
-                                            <i class="fa fa-unlock float-right" style="color: green;">
-                                            </i>
-                                            Account Unblocked
-                                        </span>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="model-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="model">Close</button>
-                    </div>
-                </div>
+          <div class="modal-body">
+            <!-- First Name -->
+            <div class="form-group">
+              <label for="firstName">First Name</label>
+              <input
+                id="firstName"
+                type="text"
+                name="firstName"
+                required
+                ngModel
+                class="form-control"
+              />
             </div>
-        </div>
+
+            <!-- Last Name -->
+            <div class="form-group">
+              <label for="lastName">Last Name</label>
+              <input
+                id="lastName"
+                type="text"
+                name="lastName"
+                required
+                ngModel
+                class="form-control"
+              />
+            </div>
+
+            <!-- Username -->
+            <div class="form-group">
+              <label for="username">Username</label>
+              <input
+                id="username"
+                type="text"
+                name="username"
+                required
+                ngModel
+                class="form-control"
+              />
+            </div>
+
+            <!-- Email -->
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input
+                id="email"
+                type="email"
+                name="email"
+                required
+                ngModel
+                class="form-control"
+              />
+            </div>
+
+            <!-- Role -->
+            <div class="form-group">
+              <label for="role">Role</label>
+              <select
+                id="role"
+                name="role"
+                required
+                ngModel
+                class="form-control"
+              >
+                <option value="ROLE_USER">USER</option>
+                <option value="ROLE_HR">HR</option>
+                <option value="ROLE_MANAGER">MANAGER</option>
+                <option value="ROLE_ADMIN">ADMIN</option>
+                <option value="ROLE_SUPER_ADMIN">SUPER ADMIN</option>
+              </select>
+            </div>
+
+            <!-- Profile Image -->
+            <div class="input-group mb-2">
+              <div class="input-group-prepend">
+                <span class="input-group-text">Profile Picture</span>
+              </div>
+              <div class="custom-file">
+                <input
+                  id="profileImage"
+                  type="file"
+                  name="profileImage"
+                  (change)="onProfileImageChange($event)"
+                  class="custom-file-input"
+                />
+                <label for="profileImage" class="custom-file-label">
+                  <span *ngIf="fileName">{{ fileName }}</span>
+                  <span *ngIf="!fileName">Choose File</span>
+                </label>
+              </div>
+            </div>
+
+            <!-- Active & Not Locked -->
+            <fieldset class="form-group">
+              <div class="form-check">
+                <label class="form-check-label" for="active">
+                  <input
+                    id="active"
+                    type="checkbox"
+                    name="active"
+                    ngModel
+                    class="form-check-input"
+                  />
+                  Active
+                </label>
+              </div>
+              <div class="form-check">
+                <label class="form-check-label" for="notLocked">
+                  <input
+                    id="notLocked"
+                    type="checkbox"
+                    name="notLocked"
+                    ngModel
+                    class="form-check-input"
+                  />
+                  Unlocked
+                </label>
+              </div>
+            </fieldset>
+          </div>
+
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-dismiss="modal"
+              id="new-user-close"
+            >
+              Close
+            </button>
+            <button
+              type="submit"
+              [disabled]="newUserForm.invalid"
+              class="btn btn-primary"
+            >
+              Save changes
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
