--- a/src/app/component-user/component-user.component.html
+++ b/src/app/component-user/component-user.component.html
@@ -31,8 +31,9 @@
     <div class="tab-pane fade show active" id="users">
       <div class="mb-3 float-right">
         <div class="btn-group mr-2">
-          <form class="form-inline my-2 my-lg-0 justify-content-center">
-            <input name="searchFileName" class="form-control mr-sm-2" type="search" placeholder="Search users..." />
+          <form #searchForm="ngForm" class="form-inline my-2 my-lg-0 justify-content-center">
+            <input name="searchTerm" class="form-control mr-sm-2" ngModel
+            (ngModelChange)="searchUsers(searchForm.value.searchTerm)" type="search" placeholder="Search users..." />
           </form>
           <!-- New User Button -->
           <button
@@ -154,7 +155,7 @@
               <input
                 id="username"
                 type="text"
-                name="username"
+                name="userName"
                 required
                 ngModel
                 class="form-control"
@@ -259,6 +260,66 @@
             </button>
           </div>
         </form>
+      </div>
+    </div>
+  </div>
+
+  <!-- Hidden button to trigger user info modal -->
+  <button
+    type="button"
+    id="openUserInfo"
+    class="btn btn-primary"
+    data-toggle="modal"
+    data-target="#userInfoModal"
+    style="display: none;"
+  ></button>
+
+  <!-- User Info Modal -->
+  <div
+    class="modal fade"
+    id="userInfoModal"
+    tabindex="-1"
+    role="dialog"
+    aria-labelledby="userInfoModalTitle"
+    aria-hidden="true"
+  >
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+
+        <div class="modal-header">
+          <h5 class="modal-title" id="userInfoModalTitle">
+            User Details: {{ selectedUser.firstName }} {{ selectedUser.lastName }}
+          </h5>
+          <button
+            type="button"
+            class="close"
+            data-dismiss="modal"
+            aria-label="Close"
+          >
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+
+        <div class="modal-body">
+          <p><strong>User ID:</strong> {{ selectedUser.userId }}</p>
+          <p><strong>Username:</strong> {{ selectedUser.userName }}</p>
+          <p><strong>Email:</strong> {{ selectedUser.email }}</p>
+          <p><strong>Status:</strong>
+            <span *ngIf="selectedUser.active" class="badge badge-success">Active</span>
+            <span *ngIf="!selectedUser.active" class="badge badge-danger">Inactive</span>
+          </p>
+        </div>
+
+        <div class="modal-footer">
+          <button
+            type="button"
+            class="btn btn-secondary"
+            data-dismiss="modal"
+          >
+            Close
+          </button>
+        </div>
+
       </div>
     </div>
   </div>
