--- a/src/app/component-login/component-login.component.html
+++ b/src/app/component-login/component-login.component.html
@@ -27,10 +27,11 @@
                     <span class="help-block" style="color: red;"
                         *ngIf="passwordInput.invalid && passwordInput.touched">Please enter a password.</span>
                     <div class="d-flex justify-content-center mt-3 login_container">
-                        <button type="submit" [disabled]="loginForm.invalid || showLoading" name="button" class="btn login_btn">
+                        <button type="submit" [disabled]="loginForm.invalid || showLoading" name="button"
+                            class="btn login_btn">
                             <i *ngIf="showLoading" class="fas fa-spinner fa-spin"></i>&nbsp;&nbsp;
-                            <span *ngIf="!showLoading">Loading...</span>
-                            <span >Login</span>
+                            <span *ngIf="!showLoading">Login</span>
+                            <span *ngIf="showLoading">Loading...</span>
                         </button>
                     </div>
                 </form>
